i7/linux/verify-test-1/latest/logs/plain-linux-servlet/err.txt
restart: Unknown instance: 
/home/tfb/FrameworkBenchmarks/plain/build.sbt:3: error: not found: object spray
import spray.revolver.RevolverPlugin.Revolver
       ^
